-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0 FF
-
None
-
-
d6e01ae05c3695aaf7d0d434718154b6ff151e32 (qt/qtbase/dev) 781b1f32f0f36006baa3f4b3ea64ceb1a4c9859a (qt/qtbase/6.2)
This is a regression in the dev branch. 6.1 is fine.
With a very simple .pro file, qmake6 fails to find the mkspecs directories:
# qmake6 ..
Could not find qmake spec 'linux-g++'.
Error processing project file: ../qmlpluginexports.pro
strace gives the reason:
newfstatat(AT_FDCWD, "/usr/share/qt6/mkspecs/linux-g++", 0x7ffc3ca6fb90, 0) = -1 ENOENT (No such file or directory) write(2, "Could not find qmake spec 'linux"..., 39Could not find qmake spec 'linux-g++'.
qtbase is built with -DINSTALL_MKSPECSDIR:STRING=/usr/lib64/qt6/mkspecs
and the mkspecs files are correctly installed in /usr/lib64/qt6/mkspecs/
| For Gerrit Dashboard: QTBUG-94591 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 356185,2 | Fix QT_HOST_DATA for builds setting INSTALL_MKSPECSDIR | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 356366,2 | Fix QT_HOST_DATA for builds setting INSTALL_MKSPECSDIR | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |